--- a/HelloWorld/src/main/webapp/css/galleryStyle.css
+++ b/HelloWorld/src/main/webapp/css/galleryStyle.css
@@ -1,7 +1,8 @@
-.container{
+.gallery-container{
 	width:80%;
 	margin:auto;
 	heigth:550px; 	
 	background-image: url("../images/content.png");
 	position: relative;
 }
+
