--- a/HelloWorld/src/main/webapp/css/global.css
+++ b/HelloWorld/src/main/webapp/css/global.css
@@ -1,4 +1,20 @@
-body{
+.content-area{
 	background-image: url("../images/101.jpg");
 	background-size: cover;
+	margin: 0px; 
+	color:white;
+	
+}
+.content-area-width{
+	width:100%;
+	height:100%;
+}
+.content-area-padding{
+	border-spacing: 0px;
+}
+.content-paragraph{
+	
+	height:680px;
+	width:75%;
+	margin: auto;
 }
