--- a/HelloWorld/src/main/webapp/css/global.css
+++ b/HelloWorld/src/main/webapp/css/global.css
@@ -3,6 +3,7 @@
 	background-size: cover;
 	margin: 0px; 
 	color:white;
+	text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 	
 }
 .content-area-width{
