--- a/HelloWorld/src/main/webapp/css/login.css
+++ b/HelloWorld/src/main/webapp/css/login.css
@@ -4,21 +4,24 @@
 	/* #4CAF50*/
 	border-collapse:separate;
 	width:50%;
+	overflow:hidden;
+}
+.label{
+	width: 150px;
+	text-align: right;
 }
 .login-input {
-    text-align: right;
+    
 }
-input[type=text] {
-    float: left;
+/* input[type=text] {
     clear:both;
     overflow: hidden;
    
 }
 input[type=password] {
-    float: left;
     clear:both;
 	overflow: hidden;
-}
+} */
 .submit{
 
 	margin:auto;
